NM-4397A change thumb in activity feed to uploaded image after adding image to project

--- a/app/community_views/shared/_activity_status_body.html.haml
+++ b/app/community_views/shared/_activity_status_body.html.haml
@@ -5,7 +5,7 @@
 - else
   - followed = event.followed
   - body = event.description
-  - image = image_for_followed(followed)
+  - image = image_for_event(event)
   - title = link_to event.name, followed, target: target
 
 %section
