--- a/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
@@ -21,7 +21,7 @@
     .alert.alert-warning
       #{t('dashboard.user_reservations.pending_confirmation')} <strong>#{reservation.time_to_expiry(reservation.expire_at)}</strong>.
 
-    - if reservation.payment.active_merchant_payment?
+    - if reservation.payment.try(:active_merchant_payment?)
       - if reservation.payment.billing_authorizations.present?
         .alert.alert-warning= I18n.t('dashboard.user_reservations.money_info')
 
