NM-4445 update credit card for spacer

--- a/app/views/recurring_booking_mailer/notify_guest_of_payment_overdue.html.liquid
+++ b/app/views/recurring_booking_mailer/notify_guest_of_payment_overdue.html.liquid
@@ -2,7 +2,9 @@
 
 <p>We were unable to charge your credit card for subscription of '<a href="{{ listing.listing_url }}">{{ listing.name }}</a>'</p>
 
-<p>Please check your credit card we'll retry operation tomorrow.</p>
+<p>Please update your payment information.</p>
+
+<a class="btn" href="{{ recurring_booking.guest_show_url }}">Update payment information</a>
 
 <p>Amount: {{ recurring_booking.last_unpaid_amount }}</p>
 
