--- a/app/views/recurring_booking_mailer/notify_host_of_payment_information_updated.html.liquid
+++ b/app/views/recurring_booking_mailer/notify_host_of_payment_information_updated.html.liquid
@@ -1,10 +1,6 @@
 <h2>{{ user.first_name }},</h2>
 
-<p>We were unable to charge {{ recurring_booking.owner.first_name }}'s credit card for subscription of '<a href="{{ listing.listing_url }}">{{ listing.name }}</a>'</p>
-
-<p>{{ recurring_booking.owner.first_name }} has been notified about the fact and asked to update his payment information.</p>
-
-<p>Amount: {{ recurring_booking.last_unpaid_amount }}</p>
+<p>We just wanted to nofiy you that {{ recurring_booking.owner.first_name }} has paid for '<a href="{{ listing.listing_url }}">{{ listing.name }}</a>'</p>
 
 <p>You can manage your bookings <a href="{{ platform_context.host | append:recurring_booking.manage_guests_dashboard_url }}">here</a></p>
 
