--- a/app/new_ui_views/schedules/_unavailability.html.haml
+++ b/app/new_ui_views/schedules/_unavailability.html.haml
@@ -4,7 +4,7 @@
 %p
   = t(:info, scope: [:pricing, :unavailability])
 
-= f.input :unavailable_period_enabled, as: :switch
+= f.input :unavailable_period_enabled, as: :switch if f.object.respond_to?(:uavailable_period_enabled)
 
 %div
   = f.simple_fields_for :schedule_exception_rules do |schedule_exception_rule_form|
