--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_availability.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_availability.html.haml
@@ -32,6 +32,9 @@
         %p
           - association_insertion_node_selector = id_prefix.empty? ? ".custom-availability .nested-fields-set" : ".#{id_prefix} .custom-availability .nested-fields-set"
           = link_to_add_association t(:add_availability, scope: [:pricing, :availability]) , at, :availability_rules, partial: 'dashboard/company/transactables/form_fields/time_availability', class: 'btn btn-primary', data: { association_insertion_node: association_insertion_node_selector, association_insertion_method: :append }, render_options: { locals: { index: 2} }
+
+        .unavailability= render 'schedules/unavailability', f: at
+
       /
         %p
           = t(:preset_info, scope: [:pricing, :availability])
