--- a/app/new_ui_views/listings/reservations/review.html.haml
+++ b/app/new_ui_views/listings/reservations/review.html.haml
@@ -12,7 +12,12 @@
             %p= t 'reservations_review.errors.whoops'
             %ul
               - @reservation_request.errors[:base].each do |error|
-                %li= error
+                - error.split("\n").each do |e|
+                  - e.sub!(/^Properties/, '')
+                  - e.sub!('Address address', 'Address')
+                  - next if ["Address latitude can't be blank", "Address longitude can't be blank"].any? { |m| e == m }
+                  %li= e
+
             = f.hidden_field :total_amount_check, value: @reservation.total_amount.cents
 
         = render 'summary', reservation: @reservation, reservation_request: @reservation_request
