--- a/app/views/instance_admin/manage/service_types/_form.html.haml
+++ b/app/views/instance_admin/manage/service_types/_form.html.haml
@@ -59,9 +59,14 @@
       .input-container.col-xs-6
         = f.input :cancellation_policy_hours_for_cancellation, required: false, input_html: { class: 'form-control' }
       .input-container.col-xs-6
-        = f.input :cancellation_policy_penalty_percentage do
-          = f.input_field :cancellation_policy_penalty_percentage, type: 'tel', class: 'form-control'
-        .info Penalty fee works only when payment is processed with Stripe or Braintree Payment Gateway
+        - if f.object.skip_payment_authorization?
+          = f.input :cancellation_policy_penalty_hours do
+            = f.input_field :cancellation_policy_penalty_hours, class: 'form-control'
+          .info Penalty fee works only when payment is processed with Stripe or Braintree Payment Gateway
+        - else
+          = f.input :cancellation_policy_penalty_percentage do
+            = f.input_field :cancellation_policy_penalty_percentage, type: 'tel', class: 'form-control'
+          .info Penalty fee works only when payment is processed with Stripe or Braintree Payment Gateway
 
   .content-container
     %h4= t('instance_admin.manage.service_types.booking_settings')
