--- a/app/new_ui_views/registrations/attributes/_password.html.haml
+++ b/app/new_ui_views/registrations/attributes/_password.html.haml
@@ -1,2 +1,4 @@
 - if only_inputs.empty? || only_inputs.include?(:password)
   = f.input :password, :label => (f.object.persisted? ? t('general.change_password') : t('general.password') )
+  = f.input :password_confirmation, :label => t('general.password_confirmation')
+
