NM-4393 Disabled options will now be hidden altogether

--- a/app/frontend/stylesheets/sections/_reservations.scss
+++ b/app/frontend/stylesheets/sections/_reservations.scss
@@ -474,3 +474,6 @@ body.reservations-review, body.reservations-create {
   }
 }
 
+.reservation-wizard select option[disabled] {
+    display: none;
+}
