NM-4423 Updated signup forms

--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,6 +1,6 @@
 - title t('sign_up_form.sign_up_to', marketplace_name: platform_context.name)
 
-#signup
+#signup.signup-form
   .row-fluid
     .span8.offset2
       .box
