NM-4472 Blog heading fixes
NM-4473 Fixes truncated google button

NM-4474 Removed invalid font family

Added header image for user blogs

--- a/app/frontend/stylesheets/blog/_style.scss
+++ b/app/frontend/stylesheets/blog/_style.scss
@@ -290,13 +290,18 @@ body.blog {
 
                 .social-buttons {
                     height: 25px;
-                    overflow: hidden;
+
+                    &:after {
+                        content: "";
+                        display: table;
+                        clear: both;
+                    }
 
                     > div {
                         float: left;
                         margin-right: 10px;
                         margin-top: 5px;
-                        height: 20px;
+                        height: 22px;
 
                         &:last-child {
                             margin-right: 0px;
