--- a/app/views/registrations/blog/_header.html.liquid
+++ b/app/views/registrations/blog/_header.html.liquid
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="header-text-and-logo">
+  <div class='header-text-and-logo' style='background-image: url({{ @user.blog.header_image_url }});'>
     <div class="v-wrap">
       <div class="v-box">
         <a href='{{@user.user_blog_posts_list_path}}' >
