NM-4479 fix braintree refund messages

--- a/app/views/instance_admin/manage/payments/show.html.haml
+++ b/app/views/instance_admin/manage/payments/show.html.haml
@@ -72,4 +72,17 @@
               = refund.receiver.try(:capitalize)
             %p
               Response:
-              = refund.response.to_yaml
+              = refund.response
+
+- if @payment.voided?
+  .content-container
+    %h4 Payment void
+    .content-container
+      .row
+        .text-container{class: @payment.successful_billing_authorization.success? ? 'text-success' : 'text-danger' }
+          %p
+            Voided at:
+            = @payment.successful_billing_authorization.void_at
+          %p
+            Void Response:
+            = @payment.successful_billing_authorization.void_response
