NM-4462 show only future dates and hours on reservation page

--- a/app/frontend/stylesheets/sections/listings/_search.scss
+++ b/app/frontend/stylesheets/sections/listings/_search.scss
@@ -8,6 +8,10 @@ section.search#content {
     margin-top: -55px;
   }
 
+  .search-filter-box select.time-select option[disabled]{
+    display: none;
+  }
+
   .loading {
     position: fixed;
     top: 50%;
