NM-4509 Do not allow to check disabled custom checkboxes
NM-4505 Notification icons for user and host registrations

NM-4507 Option to constrain video width

--- a/app/frontend/stylesheets/new_ui/common/config/_variables.scss
+++ b/app/frontend/stylesheets/new_ui/common/config/_variables.scss
@@ -1,3 +1,4 @@
+
 // Specifies owner specific CSS rules.
 //
 // We will iterate on this approach over time, and the longer term plan is to
@@ -892,6 +893,7 @@ $header-tagline-color: #fff;
 
 
 // Sidebar
+$sidebar-width: 220px;
 $sidebar-background: $gray-dark;
 $sidebar-links-color: #fff;
 $sidebar-links-color-selected: $brand-primary;
