--- a/app/views/dynamic_themes/new_ui.css.erb
+++ b/app/views/dynamic_themes/new_ui.css.erb
@@ -478,6 +478,7 @@ button.close { background: transparent; border: 0; }
 .alert.deleted { background: <%= theme_red %>; color: #fff; }
 .alert.deleted .close { color: #fff; }
 .navbar-primary { border: none; }
+.navbar-primary .count { background: <%= theme_blue %>; }
 @media (min-width: 768px) { .navbar-primary .navbar-nav > li { border-left: 1px solid #4c4c4c; } }
 @media (max-width: 768px) { .navbar-primary .navbar-nav .open .dropdown-menu { background-color: #3a3a3a; border: 0; } }
 .page-header { background: #fff; }
