--- a/app/new_ui_views/dashboard/company/host_reservations/index.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/index.html.haml
@@ -1,11 +1,12 @@
 -# We are using generic_lessee_term here because the list may include reservations for multiple types of services
-- title "#{t('general.generic_lessee_term').capitalize.pluralize} (#{@guest_list.reservations.size})"
+- title t('dashboard.nav.host_reservations')
 
 - content_for :page_header do
   %h1= yield :title
 
 - active_state = params[:state] || 'unconfirmed'
-- tabs = ['unconfirmed', 'confirmed', 'archived'].map { |state| { name: t(state.to_sym, scope: [:dashboard, :host_reservations]), url:  dashboard_company_host_reservations_path(state: state), active: (params[:action] == 'index' && active_state == state) }}
+
+- tabs = ['unconfirmed', 'confirmed', 'archived'].map { |state| { name: "#{t(state.to_sym, scope: [:dashboard, :host_reservations])} (#{Controller::GuestList.new(current_user).filter(state).reservations.size})", url:  dashboard_company_host_reservations_path(state: state), active: (params[:action] == 'index' && active_state == state) }}
 
 = dashboard_panel_multi_tabs(tabs)
 
