--- a/app/new_ui_views/dashboard/user_reservations/index.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/index.html.haml
@@ -1,12 +1,12 @@
-- title t('dashboard.user_reservations.title_count', count: @reservations.count)
+- title t('dashboard.nav.user_reservations', count: @reservations.count)
 
 - content_for :page_header do
   %h1= yield :title
 
 - actions = ['booking_successful', 'upcoming', 'booking_failed']
 - tabs = []
-- tabs.push({ name: t('dashboard.user_reservations.upcoming'), url: upcoming_dashboard_user_reservations_path, active: actions.include?(params[:action]) })
-- tabs.push({ name: t('dashboard.user_reservations.archived'), url: archived_dashboard_user_reservations_path, active: params[:action] == 'archived' })
+- tabs.push({ name: "#{t('dashboard.user_reservations.upcoming')} (#{@upcoming_count})".html_safe, url: upcoming_dashboard_user_reservations_path, active: actions.include?(params[:action]) })
+- tabs.push({ name: "#{t('dashboard.user_reservations.archived')} (#{@archived_count})".html_safe, url: archived_dashboard_user_reservations_path, active: params[:action] == 'archived' })
 
 = dashboard_panel_multi_tabs(tabs)
 
