--- a/app/views/layouts/_header_navigation.html.haml
+++ b/app/views/layouts/_header_navigation.html.haml
@@ -31,6 +31,7 @@
       %a.nav-link.dropdown-toggle.user-dropdown{"data-toggle" => "dropdown", href: "#"}
         %span.text= current_user.first_name
         %span.icon.ico-user
+        = current_user_open_all_reservations_count_formatted
         %span.ico-chevron-down
       .clearfix
       %ul.dropdown-menu
@@ -49,11 +50,13 @@
           %li
             = link_to main_app.dashboard_company_host_reservations_path, class: 'nav-link dropdown-toggle' do
               %span= t 'top_navbar.bookings_received'
+              = current_user_open_host_reservations_count_formatted
 
         - if (platform_context.bookable? && HiddenUiControls.find('main_menu/my_bookings').visible?) && (!current_instance.split_registration || current_user.buyer_profile.present?)
           %li
             = link_to main_app.dashboard_user_reservations_path, class: 'nav-link dropdown-toggle' do
               %span= t 'top_navbar.my_bookings'
+              = current_user_open_user_reservations_count_formatted
 
         - if subscribable? && HiddenUiControls.find('main_menu/my_subscriptions').visible? && (!current_instance.split_registration || current_user.buyer_profile.present?)
           %li
