--- a/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect_owner_fields.html.haml
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect_owner_fields.html.haml
@@ -21,12 +21,13 @@
         .col-md-9.input-container
           = f.text_field :last_name, class: 'string optional'
 
-  .string.optional
+  .string.optional{class: f.error(:dob) ? 'has-error' : ''}
     .row
       .col-md-3
         = f.label :dob, t('dashboard.merchant_account.dob'), class: 'string optional control-label'
       .col-md-9.input-container
         = f.text_field :dob, placeholder: 'YYYY-MM-DD', class: 'string optional'
+      %span.help-block= f.error :dob
 
   - if (@owners_counter == 0 && merchant_account.needs?('legal_entity.verification.document')) || @owners_counter != 0
     .string.optional
