--- a/app/views/home/_search_box_inputs.html.liquid
+++ b/app/views/home/_search_box_inputs.html.liquid
@@ -49,3 +49,7 @@
   <input type="hidden" name="transactable_type_class">
   <input type="submit"/>
 </form>
+
+<script type="text/javascript">
+  $(document).ready(function() { $(document).trigger('init:homepageranges.nearme'); });
+</script>
